# vio_slam_try

./: CMakeLists.txt  README.md
config/: euroc_config.yaml
include/: common_include.h  estimator.h  feature_manager.h  feature_tracker.h  optimizer.h  parameter.h  system.h  utility.h
include/backend/: algorithm_LM.h  base_edge.h  base_vertex.h  edge_types.h  integration_base.h  loss_function.h  problem.h  vertex_types.h
include/camera_model/: camera.h  camera_factory.h  pinhole_camera.h
include/initial/: initial_alignment.h  initial_sfm.h
src/: CMakeLists.txt  estimator.cpp  feature_manager.cpp  feature_tracker.cpp  optimizer.cpp  parameter.cpp  system.cpp
src/backend/: algorithm_LM.cpp  base_edge.cpp  base_vertex.cpp  edge_types.cpp  loss_function.cpp  problem.cpp  vertex_types.cpp
src/camera_model/: camera.cpp  camera_factory.cpp  pinhole_camera.cpp
src/initial/: initial_alignment.cpp  initial_sfm.cpp
test/: CMakeLists.txt  euroc2tum.cpp  vio_run.cpp
